# road700

./: .dockerignore  .env.example  .gitignore  Dockerfile.app  Gap analysis и roadmap по use case сотрудника.md  README.md  Use Case сотрудника и чек-лист соответствия.md  docker-compose.server.yml  docker-compose.yml  Вопросы и ответы по проекту.md  Копия 06.25 Калькулятор Д4 25.07.25.xlsx  Нормо-часы Volvo КамАЗ Valdai и прицепы - исследование.md  План реализации и архитектура проекта.md  Сводка по источнику заказ-нарядов 2025 для ИИ.md  Сводка по новым папкам сервисов и заказ-нарядов.md  Сводка по реестрам автопарка.md  Сводка по справочнику нормо-часов Dong Feng.md  Сопоставление автопарка и нормо-часов.md  план 1.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260316_0001_initial_schema.py  20260316_0002_document_processing_jobs.py  20260316_0003_document_kind.py  20260316_0004_labor_norms.py  20260317_0005_labor_norm_scopes.py  20260317_0006_labor_norm_catalogs.py  20260317_0007_review_rules.py  20260317_0008_ocr_rules.py  20260317_0009_ocr_profile_matchers.py  20260317_0010_ocr_learning_signals.py  20260317_0011_password_reset_tokens.py  20260317_0012_normalize_user_emails.py  20260319_0013_import_job_queue_fields.py
backend/app/: main.py
backend/app/api/: access.py  audit.py  auth.py  backups.py  dashboard.py  deps.py  documents.py  health.py  imports.py  jobs.py  labor_norms.py  ocr_learning.py  (+11 more)
backend/tests/: test_document_jobs.py  test_document_ocr_runtime.py  test_review_and_services.py
(+197 files in other folders)
